--- a/starter/cluster-original.yml
+++ b/starter/cluster-original.yml
@@ -1,5 +1,5 @@
 # mainatiner: nick.reva@snap.com
-nodes: # !DO_NOT_UPDATE
+nodes:
 - address: 192.168.50.101
   port: "22"
   internal_address: 192.168.50.101
@@ -44,8 +44,8 @@ services:
     cert: ""
     key: ""
     path: ""
-    uid: 52034
-    gid: 52034
+    uid: 0
+    gid: 0
     snapshot: null
     retention: ""
     creation: ""
@@ -60,19 +60,15 @@ services:
     win_extra_env: []
     service_cluster_ip_range: 10.43.0.0/16
     service_node_port_range: ""
-    pod_security_policy: true
+    pod_security_policy: false
     always_pull_images: false
-    secrets_encryption_config:
-      enabled: true
-    audit_log:
-      enabled: true
-    admission_configuration:
-    event_rate_limit:
-      enabled: true
+    secrets_encryption_config: null
+    audit_log: null
+    admission_configuration: null
+    event_rate_limit: null
   kube-controller:
     image: ""
-    extra_args: #TODO 
-      feature-gates: RotateKubeletServerCertificate=true
+    extra_args: {}
     extra_binds: []
     extra_env: []
     win_extra_args: {}
@@ -90,10 +86,7 @@ services:
     win_extra_env: []
   kubelet:
     image: ""
-    extra_args: #TODO
-      feature-gates: RotateKubeletServerCertificate=true
-      protect-kernel-defaults: "true"
-      tls-cipher-suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256
+    extra_args: {}
     extra_binds: []
     extra_env: []
     win_extra_args: {}
@@ -103,7 +96,7 @@ services:
     infra_container_image: ""
     cluster_dns_server: 10.43.0.10
     fail_swap_on: false
-    generate_serving_certificate: true
+    generate_serving_certificate: false
   kubeproxy:
     image: ""
     extra_args: {}
@@ -113,168 +106,19 @@ services:
     win_extra_binds: []
     win_extra_env: []
 network:
-  plugin: calico # !DO_NOT_UPDATE
+  plugin: calico
   options: {}
   mtu: 0
   node_selector: {}
   update_strategy: null
-  tolerations: [] # !DO_NOT_UPDATE
-authentication: # !DO_NOT_UPDATE
-  strategy: x509 # !DO_NOT_UPDATE
+  tolerations: []
+authentication:
+  strategy: x509
   sans: []
   webhook: null
-addons: |
-  ---
-  apiVersion: v1
-  kind: Namespace
-  metadata:
-    name: ingress-nginx
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: Role
-  metadata:
-    name: default-psp-role
-    namespace: ingress-nginx
-  rules:
-  - apiGroups:
-    - extensions
-    resourceNames:
-    - default-psp
-    resources:
-    - podsecuritypolicies
-    verbs:
-    - use
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: RoleBinding
-  metadata:
-    name: default-psp-rolebinding
-    namespace: ingress-nginx
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: Role
-    name: default-psp-role
-  subjects:
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:serviceaccounts
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:authenticated
-  ---
-  apiVersion: v1
-  kind: Namespace
-  metadata:
-    name: cattle-system
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: Role
-  metadata:
-    name: default-psp-role
-    namespace: cattle-system
-  rules:
-  - apiGroups:
-    - extensions
-    resourceNames:
-    - default-psp
-    resources:
-    - podsecuritypolicies
-    verbs:
-    - use
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: RoleBinding
-  metadata:
-    name: default-psp-rolebinding
-    namespace: cattle-system
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: Role
-    name: default-psp-role
-  subjects:
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:serviceaccounts
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:authenticated
-  ---
-  apiVersion: policy/v1beta1
-  kind: PodSecurityPolicy
-  metadata:
-    name: restricted
-  spec:
-    requiredDropCapabilities:
-    - NET_RAW
-    privileged: false
-    allowPrivilegeEscalation: false
-    defaultAllowPrivilegeEscalation: false
-    fsGroup:
-      rule: RunAsAny
-    runAsUser:
-      rule: MustRunAsNonRoot
-    seLinux:
-      rule: RunAsAny
-    supplementalGroups:
-      rule: RunAsAny
-    volumes:
-    - emptyDir
-    - secret
-    - persistentVolumeClaim
-    - downwardAPI
-    - configMap
-    - projected
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: ClusterRole
-  metadata:
-    name: psp:restricted
-  rules:
-  - apiGroups:
-    - extensions
-    resourceNames:
-    - restricted
-    resources:
-    - podsecuritypolicies
-    verbs:
-    - use
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: ClusterRoleBinding
-  metadata:
-    name: psp:restricted
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
-    name: psp:restricted
-  subjects:
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:serviceaccounts
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:authenticated
-  ---
-  apiVersion: v1
-  kind: ServiceAccount
-  metadata:
-    name: tiller
-    namespace: kube-system
-  ---
-  apiVersion: rbac.authorization.k8s.io/v1
-  kind: ClusterRoleBinding
-  metadata:
-    name: tiller
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
-    name: cluster-admin
-  subjects:
-  - kind: ServiceAccount
-    name: tiller
-    namespace: kube-system
+addons: ""
 addons_include: []
-system_images: # !DO_NOT_UPDATE
+system_images:
   etcd: rancher/coreos-etcd:v3.4.14-rancher1
   alpine: rancher/rke-tools:v0.1.72
   nginx_proxy: rancher/rke-tools:v0.1.72
@@ -319,10 +163,10 @@ ssh_key_path: ~/.ssh/id_rsa
 ssh_cert_path: ""
 ssh_agent_auth: false
 authorization:
-  mode: rbac # !DO_NOT_UPDATE
+  mode: rbac
   options: {}
 ignore_docker_version: null
-kubernetes_version: "" # !DO_NOT_UPDATE
+kubernetes_version: ""
 private_registries: []
 ingress:
   provider: ""
@@ -337,11 +181,11 @@ ingress:
   http_port: 0
   https_port: 0
   network_mode: ""
-  tolerations: [] # !DO_NOT_UPDATE
+  tolerations: []
   default_backend: null
   default_http_backend_priority_class_name: ""
   nginx_ingress_controller_priority_class_name: ""
-cluster_name: "" # !DO_NOT_UPDATE
+cluster_name: ""
 cloud_provider:
   name: ""
 prefix_path: ""
@@ -361,7 +205,7 @@ monitoring:
   node_selector: {}
   update_strategy: null
   replicas: null
-  tolerations: [] # !DO_NOT_UPDATE
+  tolerations: []
   metrics_server_priority_class_name: ""
 restore:
   restore: false
