:wrench: [Update] update VM and cluster configuration

--- a/starter/Vagrantfile
+++ b/starter/Vagrantfile
@@ -1,8 +1,8 @@
-# mainatiner: nick.reva@snap.com
+# set up the default terminal
 ENV["TERM"]="linux"
 
 Vagrant.configure("2") do |config|
-#test for Yi!
+
   # set up root access
   config.ssh.username = 'root'
   config.ssh.password = 'vagrant'
@@ -14,25 +14,20 @@ Vagrant.configure("2") do |config|
   (1..NodeCount).each do |i|
     config.vm.define "node#{i}" do |node|
       # set base image for the vagrant box
+      # config.vm.box = "opensuse/Leap-15.2.x86_64" OLD
       config.vm.box = "opensuse/Leap-15.3.x86_64"
+      config.vm.box_version = "15.3.9.230"
 
       # set the static IP for the vagrant box
       node.vm.network "private_network", ip: "192.168.50.10#{i}"
       # configure the parameters for VirtualBox provider
       node.vm.provider "virtualbox" do |v|
         v.name = "node#{i}"
-        v.memory = 2048
+        v.memory = 4096
         v.cpus = 2
       end
-
-    config.vm.provision "shell", inline: <<-SHELL
-      sudo zypper --non-interactive install apparmor-parser
-      # install Docker
-      zypper --non-interactive install docker #python3-docker-compose
-      systemctl enable docker
-      usermod -G docker -a $USER
-      systemctl restart docker
-    SHELL
+    # Bootstrap the machine
+    config.vm.provision "shell", path: "bootstrap.sh"
     end
   end
 end
